tests/compile_fail/undeclared_malloc/source.c
int main(void) {
    int *p;
    p = malloc(4);
    return 0;
}
